# course_work_4_OOP

./: Jso.json  hh.txt  json_test.json  main.py  pyproject.toml  superjob.txt  superjob_vacancy.csv
abs_class/: abs_class_api.py  abs_class_json_saver.py  abs_class_vacancy.py  exp.py  names.csv
class_from_api/: headhunter_api.py  names.csv  superjob_api.py  superjob_vacancy.csv  vacancy.csv
class_json_saver/: class_json_saver.py
tests/: superjob_vacancy_1.csv  test_class_json_saver.py  test_headhunter_api.py  test_superjob_api.py  vacancy_1.csv
vacancy/: vacancy.py
