[tool.poetry]
name = "course-work-4-oop"
version = "0.1.0"
description = ""
authors = ["KapitonovEA <Kapitonov281087@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_4_oop"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.0"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
